# ircc

./: .gitmodules  CMakeLists.txt  README.md
cmake/: clang.cmake  gcc-arm-none-eabi.cmake  utils.cmake
controller/: CMakeLists.txt
controller/inc/: ctl.h  error.hpp  message_handler.hpp  tasks.hpp
controller/src/: ctl.cc  error.cc  interrupts.cc  message_handler.cc
headers/: board.h  config.hpp
host/: CMakeLists.txt
host/inc/: cli.hpp  connector.hpp  periodic_task.hpp  tasks.hpp  tui.hpp
host/src/: cli.cc  connector.cc  main.cc  periodic_task.cc  tasks.cc  tui.cc
os/: CMakeLists.txt
os/inc/: event.hpp  flags.hpp  log.hpp  mutex.hpp  queue.hpp  ring_buffer.hpp  sem.hpp  thread.hpp
os/src/: event.cc  log.cc  mutex.cc  sem.cc  thread.cc
pcb/resoncance_converter_controller/: .gitignore  analog.kicad_sch  controller.kicad_sch  fp-lib-table  output.kicad_sch  power.kicad_sch  resoncance_converter_controller.kicad_pcb  resoncance_converter_controller.kicad_pro  resoncance_converter_controller.kicad_sch  sym-lib-table
protocol/: CMakeLists.txt
protocol/inc/: message.hpp
protocol/src/: protocol.proto
